--- a/popup.html
+++ b/popup.html
@@ -38,6 +38,11 @@
             </button>
         </div>
 
+        <button id="btnIdm" class="btn btn-idm">
+            <svg class="btn-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path></svg>
+            Export to IDM (.ef2)
+        </button>
+
         <button id="btnClear" class="btn btn-danger-ghost">
             Clear Selection
         </button>
